@@ -18,8 +18,6 @@ if (NOT WIN32)
 endif ()
 
 if (UNIX AND NOT APPLE)
-	option (USE_X11_XFIXES "Use X11 XFixes extension (Desktop Linux)" ON)
-
 	if (NOT DEFINED WITH_LIBINDICATE_QT OR WITH_LIBINDICATE_QT)
 		pkg_search_module (LIBINDICATE_QT indicate-qt)
 	endif ()
@@ -161,24 +159,15 @@ add_definitions (${QCA2_CFLAGS_OTHER})
 include_directories (${QCA2_INCLUDE_DIRS})
 
 if (UNIX AND NOT APPLE)
-	include (FindX11)
-	if (X11_FOUND)
-		message (STATUS "Found X11 libraries: ${X11_X11_LIB}")
+	find_package (X11 REQUIRED COMPONENTS X11 Xutil Xfixes)
+	if (X11_FOUND AND X11_Xutil_FOUND AND X11_Xfixes_FOUND)
+		message (STATUS "Found required X11 libraries: ${X11_X11_LIB};${X11_Xfixes_LIB}")
 	else ()
-		message (FATAL_ERROR "Could not find X11 libraries")
+		message (FATAL_ERROR "Could NOT find X11 or X11 Xfixes extension")
 	endif ()
 
 	include_directories (${X11_INCLUDE_DIR})
-	list (APPEND ADDITIONAL_LIBRARIES ${X11_X11_LIB})
-
-	if (USE_X11_XFIXES)
-		if (X11_Xfixes_FOUND)
-			message (STATUS "Found X11 Xfixes extension: ${X11_Xfixes_LIB}")
-			list (APPEND ADDITIONAL_LIBRARIES ${X11_Xfixes_LIB})
-		else ()
-			message (FATAL_ERROR "Could not find X11 Xfixes extension")
-		endif ()
-	endif ()
+	list (APPEND ADDITIONAL_LIBRARIES ${X11_X11_LIB} ${X11_Xfixes_LIB})
 endif ()
 
 if (APPLE)
