@@ -20,9 +20,9 @@ set (MOC_SOURCES
 set (LIBRARIES "")
 
 if (UNIX AND NOT APPLE)
-	include (FindX11)
+	find_package (X11 REQUIRED COMPONENTS X11)
 	if (NOT X11_FOUND)
-		message (SEND_ERROR "X11 NOT FOUD")
+		message (SEND_ERROR "Could NOT find X11")
 	endif ()
 
 	include_directories (${X11_INCLUDE_DIR})
